# cxx-http-get

./: CMakeLists.txt  README.md  project.4coder
console/: CMakeLists.txt  main.cpp
console/src/: Arguments.h
core/: CMakeLists.txt
core/includes/: types.h
core/includes/Application/: Application.h  Server.h
core/src/Application/: Application.cpp  Server.cpp
core/src/Http/: Request.h  Response.h  Server.cpp  Server.h  initHandlers.cpp  initHandlers.h
core/src/utils/: ClearFile.h  FileSize.h  GetFolder.h  strFmt.cpp  strFmt.h
debian/: changelog  control  rules
docs/: doxygen.conf
scripts/: build.sh  create-deb.sh  install-dependencies.sh
scripts/init/: project-name
toolchain/: aarch64.cmake  arm32.cmake  windows64.cmake
